--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<!-- Logo -->
 					<div class="logo">
 						<a href="index.html">
-							<img src="images/PREETOM 1.png" alt="IMG-LOGO" data-logofixed="images/PREETOM 1.png">
+							<img src="images/PREETOM 1.png" alt="DDIS-LOGO" data-logofixed="images/PREETOM 1.png">
 						</a>
 					</div>
 
